--- a/the-academy.html
+++ b/the-academy.html
@@ -55,7 +55,7 @@
         <section class="about-section academy-section">
             <div class="section-container">
                 <div class="section-image">
-                    <img src="academy.jpg" alt="Academy Training">
+                    <img src="Academy.jpg" alt="Academy Training">
                 </div>
                 <div class="section-content2">
                     <div class="section-icon">
@@ -214,3 +214,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
